--- a/home.css
+++ b/home.css
@@ -81,7 +81,7 @@ body{
 .nav-links a {
   margin-left: 20px;
   text-decoration: none;
-  color: white;
+  color: black;
   font-weight: bolder;
   font-size: 23px;
   position: relative; /* For pseudo-element */
